Fix overflow on ios.

--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@ pre {
 
     border: 1px solid white;
     background-color: rgba(255,255,255,0.2);
+
+    overflow-x: scroll;
 }
 
 code {
